# map-data

./: README.md  pyproject.toml
data/processed/: 2023-cafes-and-restaurants-with-seating-capacity.csv  Bicycle Rails-cleaned.csv  Bus Stops-cleaned.csv  Hospitality-cleaned-filter.csv  Hospitality-cleaned.csv  Hospitality.csv  Parking Meters-cleaned.csv  Sprint 2 venues + 8 selected(Feuil1).csv  Taxi Ranks-cleaned.csv  Venues-cleaned.csv  data_out.csv  processed_hospitality.txt  taxi-ranks-raw.csv  venues_with_flat_coords.json  wp_8_wpgmza-bicycle_rails_subset.csv  wp_8_wpgmza-bus-stops.csv  wp_8_wpgmza-parking_meters_subset.csv  wpgmaps_venues.csv
data/raw/: taxi-ranks.csv  venues.csv
scripts/: clean_data.py  fetch_data.py  multiple_categories.py
src/processing/: api.py  cleaning.py  io.py
