[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-processing"
version = "0.1.0"
description = "Scripts and tools for data cleaning and analysis"
readme = "README.md"
requires-python = ">=3.9"

# Dependencies for your processing
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib",
  "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "jupyter"]

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]
