[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "processing"
version = "0.1.0"
description = "Scripts and tools for data cleaning and analysis"
readme = "README.md"
requires-python = ">=3"

# Dependencies for your processing
dependencies = [
  "requests",
  "python-dotenv",
  "pandas>=2.0",
  "numpy>=2.3",
  "matplotlib",
  "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "jupyter"]

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]
